[project]
name = "mqtt-analyzer"
version = "0.0.1"
description = ""
authors = [
    {name = "Stefano Scipioni", email = "stefano.scipioni@csgalileo.org"},
]
dependencies = [
    "configargparse>=1.5.3",
    "paho-mqtt>=1.6.1",
]
requires-python = ">=3.8"
license = {text = "MIT"}

[project.scripts]
mqtt_run = "mqtt_analyzer.main:main"

[project.optional-dependencies]
[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"


[tool]
[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "jurigged>=0.5.2",
    "pylint>=2.14.5",
    "black>=22.6.0",
    "pytest>=7.1.2",
    "mypy>=0.971",
    "debugpy>=1.6.2",
    "pytest-asyncio>=0.19.0",
    "ipython>=8.4.0",
]